...
                Section(header: ImageTextView(img: Image(systemName: "photo.fill"), txt: Text("Datos de Imagen").bold())){
                    
                    Button(action: {
                        self.showingActionSheet = true
                    }, label: {
                        HStack {
                            Text(self.imageIsNullOrNot(imageName: self.patient.ecg.imageSource) ? "Cambiar..." : "Seleccionar...")
                            Spacer()
                            Image(systemName: "camera.on.rectangle.fill").accentColor(self.imageIsNullOrNot(imageName: self.patient.ecg.imageSource) ? .green : .red)
                        }
                    })
                }.sheet(isPresented: $isSheetCameraOrLibrary) {
                    
...
                                }
                            }
                        }
                    }
                    
                }.actionSheet(isPresented: $showingActionSheet) {
                    ActionSheet(title: Text("Origen"), message: Text("Seleccione una opción"), buttons: [
                        .default(Text("Cámara")) {
                            self.isSheetCameraOrLibrary = true
                            self.isCamera = true
                        },
                        .default(Text("Librería")) {
                            self.isSheetCameraOrLibrary = true
                            self.isCamera = false
                        },
                        .cancel()
                    ])
                }
...
