...
                                 .offset(x: -40, y: -45)
                                 
                                //Settings
                                Button(action: {
                                    self.showConfig.toggle()
                                }, label: {
                                    Image(systemName: "gear")
                                    .font(.system(size: 22.0))
                                    .frame(width: 50, height: 50)
                                    .foregroundColor(.black)
                                    //.offset(x: self.fileContent.isEmpty ? 150 : 38, y: self.fileContent.isEmpty ? -40 : -40)
                                }).offset(x: self.fileContent.isEmpty ? 150 : 38, y: self.fileContent.isEmpty ? -40 : -40)
                                .sheet(isPresented: self.$showConfig){
...
